Changed the class to use only swords and psi-amps, removed incorrect level-up abilities, and improved logging. Also stubbed out design doc in README.

--- a/PaladinClass/Config/XComClassData.ini
+++ b/PaladinClass/Config/XComClassData.ini
@@ -11,6 +11,7 @@
 +SquaddieLoadout="SquaddiePaladin"
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="psiamp")
++AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="pistol")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
 +bHasClassMovie=false
@@ -20,8 +21,8 @@
 
 +SoldierRanks=( \\
 	AbilitySlots=( \\
-			(AbilityType=(AbilityName="Soulfire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-			(AbilityType=(AbilityName="Battlefury")) \\
+			(AbilityType=(AbilityName="Battlefury")), \\
+			(AbilityType=(AbilityName="Soulfire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 	), \\
 	aStatProgression=( \\
 		(StatType=eStat_Offense,StatAmount=3), \\
@@ -32,10 +33,6 @@
 		(StatType=eStat_Will,StatAmount=5) \\
 	) \\
 )
-
-+SoldierRanks=(AbilitySlots=((), \\
-							(AbilityType=(AbilityName="Battlefury"))), \\
-			  aStatProgression=((StatType=eStat_Offense,StatAmount=3), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=0), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1), (StatType=eStat_Will,StatAmount=5)))
 
 ; corporal
 +SoldierRanks=(AbilitySlots=((AbilityType=(AbilityName="LongWatch", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
