--- a/PaladinClass/Config/XComGameData.ini
+++ b/PaladinClass/Config/XComGameData.ini
@@ -1,2 +1,2 @@
 [XComGame.X2ItemTemplateManager]
-+Loadouts=(LoadoutName="SquaddiePaladin", Items[0]=(Item="AssaultRifle_CV"), Items[1]=(Item="Pistol_CV"))
++Loadouts=(LoadoutName="SquaddiePaladin", Items[0]=(Item="AssaultRifle_CV"), Items[1]=(Item="PsiAmp_CV"))
