Added custom weapon type for Holy Blade. Started working on the implementation of Holy Strike and its targeting.

--- a/PaladinClass/Config/XComClassData.ini
+++ b/PaladinClass/Config/XComClassData.ini
@@ -9,9 +9,8 @@
 +NumInDeck=4
 +KillAssistsPerKill=4
 +SquaddieLoadout="SquaddiePaladin"
-+AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="rifle")
++AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="holyblade")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="psiamp")
-+AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="pistol")
 +AllowedArmors="soldier"
 +bAllowAWCAbilities=1
 +bHasClassMovie=false
@@ -21,8 +20,8 @@
 
 +SoldierRanks=( \\
 	AbilitySlots=( \\
-			(AbilityType=(AbilityName="Battlefury")), \\
-			(AbilityType=(AbilityName="Soulfire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
+			(AbilityType=(AbilityName="HolyStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+			(AbilityType=(AbilityName="Soulfire", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)) \\
 	), \\
 	aStatProgression=( \\
 		(StatType=eStat_Offense,StatAmount=3), \\
