--- a/PaladinClass/Config/XComGameData.ini
+++ b/PaladinClass/Config/XComGameData.ini
@@ -1,2 +1,6 @@
 [XComGame.X2ItemTemplateManager]
-+Loadouts=(LoadoutName="SquaddiePaladin", Items[0]=(Item="AssaultRifle_CV"), Items[1]=(Item="PsiAmp_CV"))
+; squaddie paladins start with a holy blade and a psi amp
++Loadouts=(LoadoutName="SquaddiePaladin", Items[0]=(Item="HolyBlade"), Items[1]=(Item="PsiAmp_CV"))
+
+; holy blades, while shamelessly reusing ranger sword assets, are different than ranger swords
++WeaponCategories="holyblade"
